feat: screen pwd
